# fourth_oop_lab

./: CMakeLists.txt  README.md  for_tests.txt  main.cpp
include/: array.h  concepts.h  figure.h  point.h  polygon.h
tests/: tests.cpp
